nuevos cambios en todo el proyecto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
-spring.application.name=TodoTechProject
+# Conexión a base de datos Oracle (usando Pluggable Database: XEPDB1)
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XEPDB1
+spring.datasource.username=C##techAdmin
+spring.datasource.password=0000
+
+# Driver JDBC para Oracle
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+# Dialecto de Hibernate para Oracle 12c
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+
+# Mostrar SQL generado por Hibernate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# DDL Auto (para crear/actualizar automáticamente las tablas)
+spring.jpa.hibernate.ddl-auto=update
+
+# Codificación de fecha
+spring.datasource.hikari.connection-init-sql=ALTER SESSION SET NLS_DATE_FORMAT = 'YYYY-MM-DD'
+
+# Habilitar ejecución de data.sql
+
