--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,15 +9,15 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 # Dialecto de Hibernate para Oracle 12c
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
-# Mostrar SQL generado por Hibernate
+# Mostrar SQL generado por Hibernate (opcional para depuración)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# DDL Auto (para crear/actualizar automáticamente las tablas)
-spring.jpa.hibernate.ddl-auto=update
+# DDL Auto (IMPORTANTE: Desactiva creación/alteración automática de tablas/secuencias)
+spring.jpa.hibernate.ddl-auto=none
 
-# Codificación de fecha
+# Codificación de fecha en la sesión Oracle
 spring.datasource.hikari.connection-init-sql=ALTER SESSION SET NLS_DATE_FORMAT = 'YYYY-MM-DD'
 
-# Habilitar ejecución de data.sql
-
+# Desactivar ejecución automática de data.sql si no lo estás usando
+spring.sql.init.mode=never
