nuevas modificaciones en el data sql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-# Conexión a base de datos Oracle (usando Pluggable Database: XEPDB1)
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XEPDB1
-spring.datasource.username=C##techAdmin
+spring.datasource.username=techAdmin
 spring.datasource.password=0000
 
 # Driver JDBC para Oracle
@@ -9,15 +8,24 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 # Dialecto de Hibernate para Oracle 12c
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
-# Mostrar SQL generado por Hibernate (opcional para depuración)
+# Mostrar SQL generado por Hibernate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# DDL Auto (IMPORTANTE: Desactiva creación/alteración automática de tablas/secuencias)
-spring.jpa.hibernate.ddl-auto=none
+# DDL Auto (para crear/actualizar automáticamente las tablas)
+spring.jpa.hibernate.ddl-auto=update
 
-# Codificación de fecha en la sesión Oracle
+# Asegura que el data.sql se ejecute después de que Hibernate cree las tablas
+spring.jpa.defer-datasource-initialization=true
+
+# Codificación de fecha
 spring.datasource.hikari.connection-init-sql=ALTER SESSION SET NLS_DATE_FORMAT = 'YYYY-MM-DD'
 
-# Desactivar ejecución automática de data.sql si no lo estás usando
-spring.sql.init.mode=never
+# Habilitar ejecución de data.sql
+#spring.sql.init.mode=always
+#spring.sql.init.platform=oracle
+#spring.sql.init.encoding=UTF-8
+#spring.sql.init.continue-on-error=true
+
+
+
