nuevas adiciones a los controladores

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XEPDB1
-spring.datasource.username=techAdmin
+spring.datasource.username=todoAdmin
 spring.datasource.password=0000
 
 # Driver JDBC para Oracle
