primeras modificaciones en el backend y la infraestructura

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XEPDB1
 spring.datasource.username=todoAdmin
 spring.datasource.password=0000
 
-# Driver JDBC para Oracle
+# Driver JDBC para Oraclew
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 # Dialecto de Hibernate para Oracle 12c
