cambiando el aplication properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,31 +1,10 @@
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XEPDB1
-spring.datasource.username=todoAdmin
-spring.datasource.password=0000
+# Hibernate
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Driver JDBC para Oraclew
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-
-# Dialecto de Hibernate para Oracle 12c
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
-
-# Mostrar SQL generado por Hibernate
+# Mostrar SQL generado (opcional para depurar)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# DDL Auto (para crear/actualizar automáticamente las tablas)
-spring.jpa.hibernate.ddl-auto=update
-
-# Asegura que el data.sql se ejecute después de que Hibernate cree las tablas
+# Ejecutar data.sql despu?s de crear las tablas
 spring.jpa.defer-datasource-initialization=true
-
-# Codificación de fecha
-spring.datasource.hikari.connection-init-sql=ALTER SESSION SET NLS_DATE_FORMAT = 'YYYY-MM-DD'
-
-# Habilitar ejecución de data.sql
-#spring.sql.init.mode=always
-#spring.sql.init.platform=oracle
-#spring.sql.init.encoding=UTF-8
-#spring.sql.init.continue-on-error=true
-
-
-
