antes del despliegue, cambios en el properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-# Hibernate
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# CONEXIÓN A POSTGRESQL EN RENDER
+spring.datasource.url=jdbc:postgresql://dpg-d0l9o8ggjchc73et66rg-a.ohio-postgres.render.com:5432/todotechbd
+spring.datasource.username=todotechbd_user
+spring.datasource.password=KiTOojxVA0GMd98D68SZ51NiPn1rUCod
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Mostrar SQL generado (opcional para depurar)
+# JPA & HIBERNATE
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-# Ejecutar data.sql despu?s de crear las tablas
 spring.jpa.defer-datasource-initialization=true
