--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
+    implementation 'org.postgresql:postgresql:42.7.6'
     implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
     implementation 'io.github.wimdeblauwe:htmx-spring-boot-thymeleaf:4.0.1'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
