--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # CONEXIÓN A POSTGRESQL EN RENDER
-spring.datasource.url=jdbc:postgresql://dpg-d1lhtnndiees73fmn38g-a.ohio-postgres.render.com:5432/todotechbd
+spring.datasource.url=jdbc:postgresql://dpg-d1lhtnndiees73fmn38g-a.ohio-postgres.render.com:5432/todotechbd_7n19
 spring.datasource.username=todotechbd_7n19_user
 spring.datasource.password=wfajJKSytVu2WIp330MfUocO22tSVE7k
 spring.datasource.driver-class-name=org.postgresql.Driver
